Fix mobile overflow for non-wrapping blog elements
This commit restricts the .page and .oe-post width to the size of the
theming container.

Meaning that content that does not wrap and cannot scale (e.g. <pre>
elements) now overflow with scroll bars instead of expanding the website
width.

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -5,6 +5,7 @@
     flex-direction: column;
 
     min-height: 100%;
+    max-width: 100%;
 }
 
 .page-hero {
